; ModuleID = '/home/carl/AnghaBench/radare2/libr/anal/p/extr_....asmarchriscvriscv-opc.c_match_c_add.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/anal/p/extr_....asmarchriscvriscv-opc.c_match_c_add.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.riscv_opcode = type { i32 }

@MASK_CRS2 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.riscv_opcode*, i32)* @match_c_add to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @match_c_add(%struct.riscv_opcode* %0, i32 %1) #0 {
  %3 = alloca %struct.riscv_opcode*, align 8
  %4 = alloca i32, align 4
  store %struct.riscv_opcode* %0, %struct.riscv_opcode** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.riscv_opcode*, %struct.riscv_opcode** %3, align 8
  %6 = load i32, i32* %4, align 4
  %7 = call i64 @match_rd_nonzero(%struct.riscv_opcode* %5, i32 %6)
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %14

9:                                                ; preds = %2
  %10 = load i32, i32* %4, align 4
  %11 = load i32, i32* @MASK_CRS2, align 4
  %12 = and i32 %10, %11
  %13 = icmp ne i32 %12, 0
  br label %14

14:                                               ; preds = %9, %2
  %15 = phi i1 [ false, %2 ], [ %13, %9 ]
  %16 = zext i1 %15 to i32
  ret i32 %16
}

declare dso_local i64 @match_rd_nonzero(%struct.riscv_opcode*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
